alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,23 @@
     text-align: center;
     
   }
-  body{
-    padding: 0px;
-    margin: 0px;
-    /* overflow: hidden;  */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html, body {
+    overflow-x: hidden;
   }
   
   
   .header {
     background-color: #000000;
     padding-top: 20px;
-    padding-right:20px ;
+    /* padding-right:20px ; */
     color: white;
   }
-  .header::-webkit-scrollbar {
-    display: none;
-  }
+  
  .tit span{
     color: #f89800;
   }
